--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "angular-tabler-icons": "^2.30.0",
     "bootstrap": "^5.2.3",
     "chart.js": "^3.6.0",
+    "crypto-js": "^4.2.0",
     "ng2-charts": "^5.0.3",
     "ngx-infinite-scroll": "^16.0.0",
     "ngx-quill": "^22.0.0",
     "ngx-toastr": "^17.0.2",
     "ngx-ui-loader": "^13.0.0",
+    "quill": "^2.0.3",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.7.20",
     "tslib": "^2.3.0",
@@ -42,6 +44,7 @@
     "@angular/cli": "~16.1.5",
     "@angular/compiler-cli": "^16.1.0",
     "@angular/localize": "^16.1.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/jasmine": "~4.3.0",
     "@types/quill": "^1.3.10",
     "jasmine-core": "~4.6.0",
